# zip-meta-map

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.es.md  README.fr.md  README.hi.md  README.it.md  README.ja.md  README.md  README.pt-BR.md  README.zh.md  SCORECARD.md  SECURITY.md  SHIP_GATE.md  action.yml  pyproject.toml
.artifact/: ARTIFACT_BLUEPRINT.md  blueprint.json  decision_packet.json  history.json  memory.json  truth_bundle.json
.artifact/web/: brief.json  cache.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  dogfood.yml  publish.yml
docs/: PROFILES.md  SPEC.md
examples/: consumer.py
examples/github-action/: README.md
examples/tiny_python_cli/: META_ZIP_FRONT.md  META_ZIP_INDEX.json
site/: astro.config.mjs
site/src/: site-config.ts
site/src/content/docs/handbook/: cli-reference.md  getting-started.md  index.md  profiles.md  progressive-disclosure.md  reference.md
src/zip_meta_map/: __init__.py  benchmark.py  builder.py  chunker.py  cli.py  compare.py  diff.py  modules.py  profiles.py  report.py  roles.py  safety.py  scanner.py  server.py
src/zip_meta_map/schema/: __init__.py  meta_zip_index.schema.json  meta_zip_policy.schema.json
tests/: test_benchmark.py  test_builder.py  test_chunker.py  test_cli.py  test_compare.py  test_custom_roles.py  test_diff.py  test_hardening.py  test_incremental.py  test_modules.py  test_new_profiles.py  test_parallel_scanner.py  test_report.py  test_roles.py  test_safety.py  test_scanner.py  test_schema_validation.py  test_server.py
tests/fixtures/tiny_dotnet_cli/: Program.cs  README.md
tests/fixtures/tiny_dotnet_cli/src/: Greeter.cs
tests/fixtures/tiny_go_cli/: README.md  go.mod
tests/fixtures/tiny_go_cli/cmd/app/: main.go
tests/fixtures/tiny_java_cli/: README.md  pom.xml
tests/fixtures/tiny_java_cli/src/main/java/com/example/: App.java
tests/fixtures/tiny_java_cli/src/test/java/com/example/: AppTest.java
tests/fixtures/tiny_monorepo/: README.md  package.json
tests/fixtures/tiny_node_tool/: README.md  package.json
tests/fixtures/tiny_node_tool/src/: index.ts
tests/fixtures/tiny_node_tool/tests/: test_index.js
tests/fixtures/tiny_python_cli/: README.md  pyproject.toml
tests/fixtures/tiny_python_cli/src/tiny_cli/: __init__.py  main.py
tests/fixtures/tiny_python_cli/tests/: test_main.py
tests/fixtures/tiny_rust_cli/: Cargo.toml  README.md
tests/fixtures/tiny_rust_cli/src/: main.rs
tests/fixtures/tiny_rust_cli/tests/: integration_test.rs
