[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zip-meta-map"
version = "0.1.0a0"
description = "Generate machine-readable metadata manifests for ZIP archives and project directories"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "mcp-tool-shop", email = "64996768+mcp-tool-shop@users.noreply.github.com" },
]
keywords = ["zip", "metadata", "manifest", "ai", "navigation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "jsonschema>=4.20",
]

[project.scripts]
zip-meta-map = "zip_meta_map.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
